# FlagGems

./: .gitignore  2026-01-21-FlagGems-multi-backend.txt  CMakeLists.txt  result.json
cmake/: BackendMUSA.cmake  BackendNPU.cmake  FindTorch.cmake
ctests/: CMakeLists.txt  test_triton_fill.cpp  test_triton_pointwise.cpp
docs/content/en/getting-started/: install.md
docs/content/en/usage/: cpp.md
docs/content/zh-cn/getting-started/: install.md
docs/content/zh-cn/usage/: cpp.md
docs/layouts/shortcodes/: operator-list.html
include/flag_gems/backend/: backend_config.h  device_types.h  dispatch_macros.h  runtime_api.h  stream_adapter.h
lib/: CMakeLists.txt  add.cpp  addmm.cpp  argmax.cpp  bmm.cpp  cat.cpp  contiguous.cpp  copy.cpp  device_info.cpp  div.cpp  embedding.cpp  exponential_.cpp  fill.cpp  flash_attn_varlen_func.cpp  fused_add_rms_norm.cpp  max.cpp  mm.cpp  nonzero.cpp  reshape_and_cache_flash.cpp  rms_norm.cpp  rotary_embedding.cpp  rwkv_ka_fusion.cpp  rwkv_mm_sparsity.cpp  softmax.cpp  sort.cpp  sum.cpp  topk.cpp  zeros.cpp
src/flag_gems/: __init__.py
src/flag_gems/csrc/: CMakeLists.txt  cstub.cpp
src/flag_gems/fused/: cutlass_scaled_mm.py
tests/: conftest.py  test_torch_ops_flag_gems.py
